fixing scrollbars problems

--- a/frontend/src/components/SideBar/style.css
+++ b/frontend/src/components/SideBar/style.css
@@ -1,30 +1,29 @@
-.sidebar{
-    background-color: #003A70;
-    height: 100vh;
-    position: fixed;
-    color: white;
-    overflow-y: hidden; 
-    z-index: 1000;
+.sidebar {
+  background-color: #003a70;
+  height: 100vh;
+  position: fixed;
+  color: white;
+  overflow-y: hidden;
+  z-index: 1000;
 }
 
 .sidebarlink {
-    text-decoration: none;
-    transition: background-color 0.3s ease; 
-  }
-.sidebarlink:hover div{
-    background-color: #005092;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+}
+.sidebarlink:hover div {
+  background-color: #005092;
 }
 
 .sidebarlink.active div {
-    background-color: #005092;
+  background-color: #005092;
 }
 .dashboard-component {
-    margin-left: 16.67%; /* Adjust to the sidebar width */
-    height: 100vh;
-    overflow-y: auto; /* Allow scrolling for main content */
-    padding-top: 10px;
-    background-color: #F5F5F5;
+  margin-left: 16.67%; /* Adjust to the sidebar width */
+  height: 100vh;
+  padding-top: 10px;
+  background-color: #f5f5f5;
 }
-.main-content{
-    padding-top: 0px;
+.main-content {
+  padding-top: 0px;
 }
